npm i -D eslint eslint-plugin-vue babel-eslint

--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
     "@babel/preset-env": "^7.18.10",
     "@vue/compiler-sfc": "^3.2.37",
     "autoprefixer": "^10.4.8",
+    "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.5",
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.7.1",
+    "eslint": "^8.22.0",
+    "eslint-plugin-vue": "^9.4.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
     "postcss": "^8.4.16",
